--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -24,5 +24,6 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pip install --upgrade pip
+        pip install pytest altered_states hypothesis
         pip install -e .[test]
         pytest
