--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,5 +23,7 @@ jobs:
         pip install -e .
     - name: Test with pytest
       run: |
-        pip install pytest
+        python -m pip install --upgrade pip
+        pip install pytest altered_states hypothesis
+        pip install -e .[test]
         pytest
