--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7]
+        python-version: [3.7]
 
     steps:
     - uses: actions/checkout@v1
@@ -23,5 +23,7 @@ jobs:
         pip install -e .
     - name: Test with pytest
       run: |
-        pip install pytest
+        python -m pip install --upgrade pip
+        pip install pytest altered_states hypothesis
+        pip install -e .[test]
         pytest
