Extended callbytype to handle multiple parameters

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --pdbcls=IPython.terminal.debugger:Pdb --doctest-glob=*.org
+addopts = --pdbcls=IPython.terminal.debugger:Pdb --doctest-glob=*.org -m "not wbox"
